--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/cqrs": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "latest",
     "nestjs-prisma": "^0.14.3",
